Bug 74110 - File Corruption - Issue with <a:prstGeom > tag in document.xml
Summary: File Corruption - Issue with <a:prstGeom > tag in document.xml
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-27 09:08 UTC by Umesh Kadam
Modified: 2014-03-17 11:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File contains text in Word art. (1.55 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-27 09:08 UTC, Umesh Kadam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Umesh Kadam 2014-01-27 09:08:21 UTC
Created attachment 92840 [details]
File contains text in Word art.

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office
Expected:
File should open without any error.
Actual:
File corrupt dialog is shown
Comment 1 Jorendc 2014-02-01 15:02:49 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+ Build ID: dcca10d4e26d4602d9ac4f0b340b52c31fe086e3
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-02-01_02:04:21

Opened using Word for Mac 2011.

Kind regards,
Joren
Comment 2 Commit Notification 2014-02-13 13:19:44 UTC
umeshkadam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=515b5c7688631679fe1d39932478a835dc0a35a2

fdo#74110 : Issue with <a:prstGeom prst="rect"> tag in document.xml



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Jorendc 2014-03-17 11:07:32 UTC
No corruption anymore, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 88955714d345d8584e86ae34bf5f5d1f3f4af9f7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-03-15_04:16:49

Thanks for fixing!

Kind regards,
Joren