fdo#74110 : Issue with <a:prstGeom prst="rect"> tag in document.xml

Issue:
 - While exporting the system used to write adjustment values for preset shape type "rect" in document.xml
   with the shape guide name(adjustment name) being empty.
 - This is not accepted by MS Office. Hence the file was resulting as corrupt.

Implementation:
 - The preset shapes are being picked up from GetOOXMLPresetGeometry(), which refers pCustomShapeTypeTranslationTable[] array
   for the mapping.
 - Most of the shape types have been commented in the pCustomShapeTypeTranslationTable[] array therefore the GetOOXMLPresetGeometry()
   defaults the shapetype as rect, whereas the adjustment values are being picked up for the actual shape type(s).
 - Uncommenting the commented shape type translations( for instance textInflateTop) in pCustomShapeTypeTranslationTable will
   eventually write prst="textInflateTop" under the tag prstGeom which is invalid.
 - It should probably go under prstTxWrap.
 - In order to avoid the corruption, thought of adding a check before writing the adjustment values. If the shape type is "rect"( which is defaulted
   and does not have adjustment values defined in presetShapeDefinitions.xml) then avoid writing the adjustment values under this tag.

Conflicts:
	oox/source/export/drawingml.cxx
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7765

Change-Id: I6511e9a3ee0c01962d6e82997705a484161086ef